Made page pretty and consistent

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wireworks</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400|Montserrat:300,400|Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 	<body>
-		<h1>Wireworks</h1>
-		<p>O Wireworks foi movido. Agora se encontra temporariamente em <a href="https://wireworks-app.firebaseapp.com">https://wireworks-app.firebaseapp.com</a>. Futuramente estará disponível em <a href="https://wireworks.app">https://wireworks.app</a>.</p>
+		<div class="container">
+			<div>
+				<div id="logo">wireworks</div>
+				<div class="content">
+					<h1>O Wireworks foi movido.</h1>
+					<p>Devido a limitações técnicas, o Wireworks não está mais hospedado no GitHub Pages.</p>
+					<p>Temporariamente, a ferramenta pode ser acessada em <a href="https://wireworks-app.firebaseapp.com">wireworks-app.firebaseapp.com</a>.</p>
+					<p>Em breve, <a href="https://wireworks.app">wireworks.app</a> será o domínio definitivo.</p>
+					<p>Obrigado!</p>
+				</div>
+			</div>
+			<footer>
+				<h4>
+					© <a href="https://github.com/henriquecolini">Henrique Colini</a> e
+					<a href="https://github.com/AlvaroDziadzio">Álvaro Dziadzio</a> 2019
+				</h4>
+				<h4>Info16 <i class="material-icons">code</i></h4>
+			</footer>
+		</div>
 	</body>
 </html>
