--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<h1>O Wireworks foi movido.</h1>
 					<p>Devido a limitações técnicas, o Wireworks não está mais hospedado no GitHub Pages.</p>
 					<p>Temporariamente, a ferramenta pode ser acessada em <a href="https://wireworks-app.firebaseapp.com">wireworks-app.firebaseapp.com</a>.</p>
-					<p>Em breve, <a href="https://wireworks.app">wireworks.app</a> será o domínio definitivo.</p>
+					<p>Em breve, <a href="https://wireworks.com.br">wireworks.com.br</a> será o domínio definitivo.</p>
 					<p>Obrigado!</p>
 				</div>
 			</div>
