--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="content">
 					<h1>O Wireworks foi movido.</h1>
 					<p>Devido a limitações técnicas, o Wireworks não está mais hospedado no GitHub Pages.</p>
-					<p>Agora, a ferramenta pode ser acessada em <a href="https://wireworks.com.br">wireworks.com.br</a></p>
+					<p>Agora, a ferramenta pode ser acessada em <a href="https://wireworks.com.br">wireworks.com.br</a>.</p>
 					<p>Obrigado!</p>
 				</div>
 			</div>
